# psl-lang-fyp

./: .gitignore  main.py  pyproject.toml
PSL/alphabet_recognition/: alphabet_recognition.py  train_alphabet_model.py
PSL/word_recognition/: train_word_model.py  word_recognition.py
backend/: Dockerfile  README.md  main.py  requirements.txt
frontend/: package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Footer.jsx  Navbar.jsx
frontend/src/lib/: api.js
frontend/src/pages/: About.jsx  Contact.jsx  Home.jsx  Recognition.jsx  Signin.jsx  Signup.jsx
gui/: main.html
