[project]
name = "psl-lang-fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eel>=0.18.1",
    "fastapi>=0.115.12",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.2",
]
